# qbrix

./: .gitignore  LICENSE  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: arch-reviewer.md  archictecture-reviewer.md  backend-engineer.md  unit-test-writer.md
.pencil/: app.pen  homepage.pen
ee/: LICENSE
helm/: README.md
helm/qbrix/: .helmignore  Chart.yaml  values-dev.yaml  values.yaml
helm/qbrix/charts/cortex/: Chart.yaml  values.yaml
helm/qbrix/charts/cortex/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
helm/qbrix/charts/motor/: Chart.yaml  values.yaml
helm/qbrix/charts/motor/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
helm/qbrix/charts/proxy/: Chart.yaml  values.yaml
helm/qbrix/charts/proxy/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/qbrix/templates/: _helpers.tpl  postgres.yaml  redis.yaml  secrets.yaml
lib/: LIB.md
lib/core/: pyproject.toml  pytest.ini
lib/core/qbrixcore/: agent.py  callback.py  context.py  experiment.py  pool.py
lib/core/qbrixcore/param/: backend.py  config.py  state.py  var.py
lib/core/qbrixcore/protoc/: __init__.py  base.py
lib/core/qbrixcore/protoc/adversarial/: __init__.py  exp.py  fpl.py
lib/core/qbrixcore/protoc/contextual/: __init__.py  ts.py  ucb.py
lib/core/qbrixcore/protoc/stochastic/: __init__.py  eps.py  moss.py  ts.py  ucb.py
lib/log/: pyproject.toml
lib/log/qbrixlog/: __init__.py  config.py  context.py  formatters.py
lib/proto/: pyproject.toml
lib/proto/qbrixproto/: __init__.py  common_pb2.py  cortex_pb2.py  cortex_pb2.pyi  cortex_pb2_grpc.py  motor_pb2.py  motor_pb2.pyi  motor_pb2_grpc.py  proxy_pb2.pyi
lib/proto/src/qbrixproto/: common_pb2.pyi  motor_pb2.py  motor_pb2.pyi  proxy_pb2.py  proxy_pb2.pyi  proxy_pb2_grpc.py
lib/store/: pyproject.toml
lib/store/qbrixstore/: __init__.py  config.py
lib/store/qbrixstore/postgres/: __init__.py  models.py  session.py
lib/store/qbrixstore/redis/: __init__.py  client.py  streams.py
proto/: auth.proto  buf.gen.yaml  common.proto  cortex.proto  motor.proto  proxy.proto
svc/cortex/: Dockerfile  pyproject.toml  pytest.ini
svc/cortex/src/cortexsvc/: __init__.py  cli.py  config.py  server.py  service.py  trainer.py
svc/cortex/tests/unit/: conftest.py  test_config.py  test_server.py  test_service.py  test_trainer.py
svc/motor/: Dockerfile  pyproject.toml  pytest.ini
svc/motor/src/motorsvc/: __init__.py  agent_factory.py  cache.py  cli.py  config.py  param_backend.py  server.py  service.py
svc/motor/tests/unit/: conftest.py  test_agent_factory.py  test_cache.py  test_param_backend.py  test_server.py  test_service.py
svc/proxy/: .dockerignore  Dockerfile  pyproject.toml
svc/proxy/src/proxysvc/: __init__.py  cli.py  config.py  motor_client.py  repository.py  server.py  service.py  token.py
svc/proxy/src/proxysvc/gate/: __init__.py  cache.py  config.py  controller.py  service.py
svc/proxy/src/proxysvc/gate/model/: base.py  experiment.py  rule.py
svc/proxy/src/proxysvc/http/: app.py
svc/proxy/src/proxysvc/http/auth/: config.py  dependencies.py  middleware.py  model.py  operator.py  seed.py  server.py  service.py
svc/proxy/src/proxysvc/http/exception/: __init__.py  base.py
svc/proxy/src/proxysvc/http/router/: agent.py  auth.py  experiment.py  gate.py  pool.py
svc/proxy/tests/integration/: conftest.py  test_multitenancy.py
tests/loadtest/: README.md  cli.py  client.py  config.py
tests/loadtest/scenarios/: multi_experiment.py  single_experiment.py
