[project]
name = "qbrixio"
version = "0.1.0"
description = "qbrix distributed multi-armed bandit system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "motorsvc",
    "cortexsvc",
    "proxysvc"
]

[tool.uv.workspace]
members = ["svc/*"]

[tool.uv.sources]
proxysvc = { workspace = true}
motorsvc = { workspace = true}
cortexsvc = { workspace = true}
qbrixcore = {index = "envelope"}
qbrixstore = {index = "envelope"}

[[tool.uv.index]]
name = "envelope"
url = "https://app.envelope.dev/simple"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "black>=24.0.0",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "libs/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=qbrix",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"