[project]
name = "qbrixlog"
version = "0.1.0a0"
description = "structured logging library for qbrix services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=qbrixlog",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"