[project]
name = "qbrixproto"
version = "0.1.0alpha0"
description = "gRPC protocol definitions for qbrix services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "grpcio-tools>=1.60.0",
]

[[tool.uv.index]]
name = "envelope"
url = "https://app.envelope.dev/legacy/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"